--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     ]
   },
   "dependencies": {
+    "cors": "~2.8.4",
+    "debug": "~3.1.0",
+    "express": "~4.16.2",
+    "morgan": "~1.9.0",
     "preact": "~8.2.7"
   },
   "devDependencies": {
